--- a/guides/core-workflows/using-assertions.mdx
+++ b/guides/core-workflows/using-assertions.mdx
@@ -1,246 +1,204 @@
 ---
-title: "Assertions and Test Expectations"
-description: "Details how to use GoogleTest's rich assertion macros to validate behavior, including equality, exception, and fatal/non-fatal checks. Introduces best practices for writing clear and meaningful assertions."
+title: "Using Assertions Effectively"
+description: "A deep dive into GoogleTest's assertion macros and utilities, with examples covering equality, exceptions, customized assertions, and practical advice on when to use fatal vs. non-fatal assertions within your test flows."
 ---
 
-# Assertions and Test Expectations
+# Using Assertions Effectively
 
-This guide details how to use GoogleTest's rich assertion macros to validate behavior, enabling you to write clear, meaningful, and robust tests. You will learn how to express various types of checks, handle expected failures gracefully, and follow best practices for test validation.
+## Workflow Overview
 
----
+Assertions in GoogleTest are the foundation of verifying code behavior. This guide helps you understand how to use assertions effectively to write clear, reliable tests that precisely verify the correctness of your code.
 
-## 1. Overview of Assertions in GoogleTest
+### Prerequisites
 
-Assertions are the fundamental building blocks in test cases that check whether your code behaves as expected. GoogleTest supports two broad categories:
+- Basic familiarity with C++.
+- GoogleTest framework installed and set up.
+- Understanding of test cases and test suites.
 
-- **Fatal Assertions** (`ASSERT_*`): On failure, the current test function is aborted immediately.
-- **Non-fatal Assertions** (`EXPECT_*`): On failure, execution continues, allowing multiple checks per test.
+### Expected Outcome
 
-### Key Points:
+By following this guide, you will be able to:
 
-- Use **fatal assertions** when subsequent test steps depend on the success of the assertion.
-- Use **non-fatal assertions** to accumulate errors and report all failures in one run.
-- Assertions are thread-safe and are automatically integrated with test result reporting.
+- Use various assertion macros suitable for different test scenarios.
+- Differentiate between fatal and non-fatal assertions.
+- Write clear assertions with custom failure messages.
+- Choose appropriate assertions for specific data types and conditions.
 
----
+### Time Estimate
 
-## 2. Basic Equality and Relational Assertions
+10 to 20 minutes to understand and practice assertion usage.
 
-The simplest and most common assertions compare values for equality or inequalities.
+### Difficulty Level
 
-### Using `EXPECT_EQ` and `ASSERT_EQ`
-
-```cpp
-EXPECT_EQ(expected_value, actual_value);  // Non-fatal
-ASSERT_EQ(expected_value, actual_value);  // Fatal
-```
-
-- Compares using `operator==`.
-- On failure, reports the expected and actual values.
-- These macros automatically print values in case of failure to aid debugging.
-
-### Other Comparisons
-
-| Macro       | Description                                   |
-|-------------|-----------------------------------------------|
-| `EXPECT_NE` | Expect not equal                              |
-| `EXPECT_LT` | Expect less than                              |
-| `EXPECT_LE` | Expect less or equal                          |
-| `EXPECT_GT` | Expect greater than                           |
-| `EXPECT_GE` | Expect greater or equal                       |
-
-Example:
-
-```cpp
-ASSERT_LT(result, threshold);
-EXPECT_NE(result, 0);
-```
+Beginner to Intermediate.
 
 ---
 
-## 3. Checking Boolean Conditions
+## Understanding Assertions
 
-Use `EXPECT_TRUE(condition)` or `EXPECT_FALSE(condition)` for general boolean expressions.
+Assertions are statements that verify conditions during tests. A test's success or failure depends on whether its assertions pass or fail.
 
-```cpp
-EXPECT_TRUE(pointer != nullptr);
-EXPECT_FALSE(is_error);
-```
+There are two categories:
 
-Prefer relational assertions (`EXPECT_EQ`, `EXPECT_NE`, etc.) when possible for clearer failure messages.
+- **Fatal Assertions** (`ASSERT_*` macros): Cause immediate test function exit on failure.
+- **Non-fatal Assertions** (`EXPECT_*` macros): Report failure but allow the test to continue.
+
+Use non-fatal assertions when you want to check multiple conditions in one test. Use fatal assertions when failure should stop further execution (e.g. invalid preconditions).
 
 ---
 
-## 4. String and Floating-Point Assertions
+## Commonly Used Assertions
+
+### Boolean Conditions
+
+- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)`
+- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)`
+
+Verify a condition is true or false.
+
+### Equality and Inequality
+
+For comparing values, GoogleTest provides a range of macros:
+
+- `EXPECT_EQ(val1, val2)` / `ASSERT_EQ(val1, val2)`
+- `EXPECT_NE(val1, val2)` / `ASSERT_NE(val1, val2)`
+- `EXPECT_LT(val1, val2)` / `ASSERT_LT(val1, val2)`
+- `EXPECT_LE(val1, val2)` / `ASSERT_LE(val1, val2)`
+- `EXPECT_GT(val1, val2)` / `ASSERT_GT(val1, val2)`
+- `EXPECT_GE(val1, val2)` / `ASSERT_GE(val1, val2)`
+
+**Note:** Use `EXPECT_STREQ`/`ASSERT_STREQ` for C-string content comparison to avoid pointer equality.
 
 ### String Assertions
 
-- `EXPECT_STREQ(expected_c_str, actual_c_str)`: Compares C strings for equality.
-- `EXPECT_STRNE(expected_c_str, actual_c_str)`: Compares C strings for inequality.
-- `EXPECT_STRCASEEQ(expected_c_str, actual_c_str)`: Case-insensitive equality.
-- `EXPECT_STRCASENE(expected_c_str, actual_c_str)`: Case-insensitive inequality.
+- `EXPECT_STREQ(str1, str2)` / `ASSERT_STREQ(str1, str2)`: Compare C strings for equality.
+- `EXPECT_STRNE(str1, str2)` / `ASSERT_STRNE(str1, str2)`: Compare C strings for inequality.
+- Case insensitive variants: `EXPECT_STRCASEEQ`, `EXPECT_STRCASENE`.
+
+### Floating-Point Comparisons
+
+Because floating-point numbers can be imprecise, GoogleTest offers approximate equality:
+
+- `EXPECT_FLOAT_EQ(val1, val2)` / `ASSERT_FLOAT_EQ(val1, val2)`: For `float` values, compares within 4 ULPs.
+- `EXPECT_DOUBLE_EQ(val1, val2)` / `ASSERT_DOUBLE_EQ(val1, val2)`: For `double` values.
+- `EXPECT_NEAR(val1, val2, abs_error)` / `ASSERT_NEAR(val1, val2, abs_error)`: Compares within an absolute error bound.
+
+### Exception Assertions
+
+- `EXPECT_THROW(statement, exception_type)` / `ASSERT_THROW`: Verify code throws a specific exception.
+- `EXPECT_ANY_THROW` / `ASSERT_ANY_THROW`: Verify code throws any exception.
+- `EXPECT_NO_THROW` / `ASSERT_NO_THROW`: Verify code does not throw.
+
+---
+
+## Writing Clear Assertions with Custom Messages
+
+You can add informative messages to assertions for easier debugging. Use the streaming operator `<<`:
+
+```cpp
+EXPECT_EQ(value, expected) << "Value did not match expected.";
+```
+
+This message will appear when the assertion fails.
+
+---
+
+## Best Practices for Effective Assertions
+
+- **Choose the right assertion type:** Use `EXPECT_*` for non-fatal errors when subsequent checks make sense, and `ASSERT_*` for fatal errors requiring test termination.
+- **Avoid overly strict specifications:** Only assert what's essential to prevent fragile tests.
+- **Use matchers for flexibility:** Integrate GoogleMock matchers (see [Matchers Reference](reference/matchers.md)) for convenient argument validation.
+- **Be cautious with floating-point comparisons:** Always prefer `EXPECT_FLOAT_EQ` / `EXPECT_DOUBLE_EQ` or `EXPECT_NEAR` over direct equality.
+- **Prefer `EXPECT_THAT` for rich matching:** It allows assertions with expressive matchers from GoogleMock.
+
+---
+
+## Advanced Assertions
+
+### `EXPECT_THAT` and Matchers
+
+Use the versatile `EXPECT_THAT(value, matcher)` to verify that a value matches a sophisticated condition or pattern.
 
 Example:
 
 ```cpp
-EXPECT_STREQ("hello", GetGreeting());
+using ::testing::StartsWith;
+EXPECT_THAT(name, StartsWith("John"));
 ```
 
-### Floating-Point Assertions
+Combine matchers for complex conditions (see [Matchers Reference](reference/matchers.md)).
 
-To account for floating-point imprecision, use:
+### Predicate Assertions
 
-- `EXPECT_FLOAT_EQ(expected, actual)` for float comparison
-- `EXPECT_DOUBLE_EQ(expected, actual)` for double comparison
-- `EXPECT_NEAR(val1, val2, abs_error)` to check if two values are within an absolute difference.
+Use `EXPECT_PRED*` macros to test custom predicate functions. Example:
 
 ```cpp
-EXPECT_NEAR(computed_value, expected_value, 1e-5);
+bool IsEven(int n) { return n % 2 == 0; }
+EXPECT_PRED1(IsEven, value);
 ```
+
+### Predicate-Formatter Assertions
+
+Define more expressive failure messages with `EXPECT_PRED_FORMAT*` macros.
 
 ---
 
-## 5. Exception Assertions
+## Examples
 
-Verify that code throws or does not throw expected exceptions:
-
-- `EXPECT_THROW(statement, ExceptionType)`
-- `EXPECT_ANY_THROW(statement)`
-- `EXPECT_NO_THROW(statement)`
-
-Example:
+### Simple Equality Check
 
 ```cpp
-EXPECT_THROW(Foo(-1), std::invalid_argument);
-EXPECT_NO_THROW(Foo(10));
+EXPECT_EQ(Factorial(3), 6) << "Factorial(3) should be 6.";
 ```
 
----
-
-## 6. Fatal vs Non-Fatal Assertions in Practice
-
-Here is a typical usage scenario:
+### Floating Point Nearness
 
 ```cpp
-TEST(MyTestSuite, ExampleTest) {
-  int* ptr = GetPointer();
-  ASSERT_NE(ptr, nullptr) << "Pointer must not be null!";
-
-  // Safe to dereference ptr beyond this point.
-  EXPECT_EQ(*ptr, expected_value);
-
-  // The test continues even if EXPECT_EQ fails,
-  // so further checks can be done.
-}
+EXPECT_NEAR(CalculateValue(), 3.14, 0.01);
 ```
 
-- `ASSERT_NE` ensures the pointer is valid before continuing;
-- `EXPECT_EQ` allows multiple checks without aborting the test.
-
----
-
-## 7. Timeout and Fatal Failure Handling
-
-Use these macros to assert conditions in tests that require strict termination:
-
-- `ASSERT_DEATH(statement, regex)`: Assert that `statement` causes the process to die and the error message matches `regex`.
-- Use to test fatal failures and program shutdown scenarios.
-
-Example:
+### String Prefix Match
 
 ```cpp
-ASSERT_DEATH(SomeFunctionThatExits(), "explicit exit message");
+EXPECT_THAT(user_name, StartsWith("admin_"));
 ```
 
----
-
-## 8. Writing Custom Failure Messages
-
-You can append custom messages to assertions by using stream syntax:
+### Exception Expectation
 
 ```cpp
-EXPECT_EQ(result, expected) << "Value did not match after step 3.";
-ASSERT_TRUE(ptr != nullptr) << "Pointer should never be null when calling Foo().";
+EXPECT_THROW(OpenFile("path/to/file"), FileNotFoundException);
 ```
 
-This context helps clarify the failure source during debugging.
+---
+
+## Troubleshooting Common Assertion Issues
+
+- **Assertion fails unexpectedly:** Check if the expected and actual values are swapped.
+- **Tests crash after assertion:** Ensure fatal assertions (`ASSERT_*`) are used where necessary to stop execution that relies on valid conditions.
+- **Failure message unclear:** Provide custom messages explaining the cause.
+- **Floating-point comparisons failing:** Use approximate equality macros instead of plain equality.
 
 ---
 
-## 9. Best Practices for Assertions
+## Next Steps
 
-- Use **clear, specific assertions** rather than generic ones.
-- Keep each test focused; multiple checks per test help detect all issues in one run.
-- Place **critical checks** as fatal assertions to avoid cascading errors.
-- Avoid side-effects in expression arguments to assertions.
-- Prefer built-in typed assertions (`EXPECT_EQ`, etc.) over `EXPECT_TRUE` when comparing values.
-- Use `ASSERT_THROW` and `EXPECT_THROW` to validate exception-throwing behavior.
+- Explore [Using Assertions in Test Fixtures](guides/core-workflows/structuring-tests.md) for reusing assertions.
+- Delve into [Matchers Reference](reference/matchers.md) for powerful flexible matching.
+- Learn [Writing Your First Test Case](getting-started/first-test-experience/writing-your-first-test.md) to combine assertions with fixtures.
+- Check [Understanding Mocks](guides/mocking-best-practices/intro-mocking.md) to pair assertions with mock behaviors.
 
 ---
 
-## 10. Advanced Tips
+## Summary
 
-- To compare containers or objects, use `EXPECT_THAT()` with GoogleMock matchers for expressive and descriptive validation.
-- Use `ASSERT_NO_FATAL_FAILURE()` to run some code but abort on any fatal failures during it.
-- Use the `SCOPED_TRACE()` macro to add contextual information that propagates through nested assertions.
+This guide equips you to use GoogleTest assertions confidently and effectively, improving your tests’ clarity and robustness. Remember to always match the right assertion macro to your intent, leverage matchers for expressiveness, and provide custom messages that help maintain your test code.
 
----
+<Tip>
+To prevent order-of-evaluation surprises with assertions, remember that GoogleTest macros evaluate arguments exactly once, so any side effects occur a single time.
+</Tip>
 
-## 11. Troubleshooting Assertions
-
-### Common Issues
-
-- **False positives/negatives**: Ensure that expressions in assertions do not have unpredictable side effects.
-- **Unclear failure messages**: Use custom failure messages or switch to typed assertions for better diagnostics.
-- **Test aborting prematurely**: Make sure to distinguish when to use fatal vs non-fatal assertions.
-
-### Diagnostics
-
-- Use verbose logging or debug mode to see assertion failures in detail.
-- In IDEs, failure location links can help pinpoint the source.
+<Tip>
+For complex data types, customize printing by implementing `PrintTo()` functions, so assertion failures deliver meaningful diagnostics.
+</Tip>
 
 ---
-
-## 12. Example: Validating a Calculator
-
-```cpp
-TEST(CalculatorTest, AddsNumbers) {
-  Calculator calc;
-  int result = calc.Add(2, 3);
-  EXPECT_EQ(result, 5) << "Addition failed for 2 + 3.";
-}
-
-TEST(CalculatorTest, DividesNumbers) {
-  Calculator calc;
-  ASSERT_NO_THROW({
-    int div = calc.Divide(10, 2);
-    EXPECT_EQ(div, 5) << "Division result incorrect.";
-  });
-
-  EXPECT_THROW(calc.Divide(10, 0), std::invalid_argument);
-}
-```
-
-This test suite shows both non-fatal and fatal assertion usage, messages, and exception validation.
-
----
-
-## 13. Next Steps & Related Content
-
-- Explore [Writing Parameterized and Typed Tests](guides/core-workflows/parameterized-tests) to test multiple data combinations efficiently.
-- Consult the [Matchers Reference](api-reference/matchers-actions/argument-matchers) for more expressive assertions using predicates.
-- Review the [Mocking Reference](api-reference/mocking-apis/mock-expectations-actions) to understand how to use assertions with mock expectations.
-- Learn about [Death Tests and Error Handling](guides/core-workflows/death-tests) for advanced failure scenario testing.
-
----
-
-## 14. Additional Resources
-
-- [GoogleTest Primer](getting-started/first-test-experience/writing-your-first-test)
-- [Core Concepts & Terminology](overview/architecture-concepts/core-concepts-terminology)
-- [Setting Expectations and Actions](api-reference/mocking-apis/mock-expectations-actions)
-
----
-
-# Summary
-This page equips you with comprehensive knowledge on GoogleTest's assertions and expectations, guiding you to write robust tests that capture intended behaviors, handle errors gracefully, and provide meaningful feedback. It covers basic and advanced assertions, exception checks, failure handling, and best usage practices.
