--- a/guides/core-workflows/parameterized-tests.mdx
+++ b/guides/core-workflows/parameterized-tests.mdx
@@ -1,334 +1,274 @@
 ---
-title: "Writing Parameterized and Typed Tests"
-description: "Step-by-step walkthroughs for writing value- and type-parameterized tests using GoogleTest's macros. Explains how to maximize test coverage efficiently and avoid duplication."
+title: "Parameterizing Tests: Value and Type Parameters"
+description: "Detailed guidance on creating value- and type-parameterized test cases, enabling broad test coverage with minimal code. Includes common patterns and setup advice for making tests flexible and maintainable."
 ---
 
-# Writing Parameterized and Typed Tests
+# Parameterizing Tests: Value and Type Parameters
 
 ## Overview
 
-This guide offers practical, step-by-step instructions for writing value- and type-parameterized tests using GoogleTest's macros. By mastering these techniques, you will maximize test coverage efficiently, avoid code duplication, and create flexible test suites that validate your codebase against multiple input parameters or types.
-
-## Prerequisites
-
-- Ensure you have GoogleTest installed and properly configured in your project.
-- Familiarity with writing basic tests using `TEST()` and `TEST_F()` macros.
-- Basic understanding of C++ templates (for typed tests).
-- Include the GoogleTest header: `#include <gtest/gtest.h>`.
-
-## Expected Outcome
-
-By completing this guide, you will be able to:
-
-- Define value-parameterized test fixtures and tests.
-- Instantiate parameterized tests with different value sets.
-- Write typed tests for running test logic across multiple types.
-- Define and instantiate type-parameterized tests for reusable test patterns.
-- Apply custom naming schemes to parameterized tests for clarity.
-
-## Time Estimate
-
-Approximately 15-30 minutes for initial understanding and implementation.
-
-## Difficulty Level
-
-Intermediate (requires familiarity with C++ templates and GoogleTest basics).
+This guide explains how to write and instantiate **value-parameterized** and **type-parameterized** tests using GoogleTest. By leveraging these features, you can increase test coverage while minimizing code duplication. The guide provides practical steps, common usage patterns, and examples for creating flexible, maintainable parameterized tests.
 
 ---
 
-## 1. Writing Value-Parameterized Tests
+## 1. Understanding Parameterized Tests
 
-Value-parameterized tests allow you to run the same test logic against various input values efficiently.
+Parameterized tests in GoogleTest enable you to run the same test logic against different data values or types, without writing separate test functions for each case. This reduces boilerplate and encourages thorough testing.
 
-### Step 1: Define a Parameterized Test Fixture
+- **Value-Parameterized Tests:** Tests run multiple times with different input values.
+- **Type-Parameterized Tests:** Tests run with different C++ types as parameters.
 
-Create a test fixture class derived from `testing::TestWithParam<T>`, where `T` is the type of the parameter values.
+---
+
+## 2. Value-Parameterized Tests
+
+### 2.1 Workflow Overview
+
+- **Task Description:** Create test suites that execute a test case multiple times with different values to cover various input scenarios.
+- **Prerequisites:** Basic knowledge of writing tests with `TEST` and `TEST_F` macros.
+- **Expected Outcome:** A single test fixture that can run multiple test instances with distinct parameter values.
+- **Time Estimate:** 10–20 minutes to write and instantiate simple parameterized tests.
+- **Difficulty Level:** Intermediate.
+
+### 2.2 Writing Value-Parameterized Tests
+
+1. **Define a test fixture class that inherits from `::testing::TestWithParam<T>`**
+    - Replace `T` with the parameter type you want to test.
+    - Your class can define setup and helper functions as usual.
 
 ```cpp
 class FooTest : public ::testing::TestWithParam<int> {
-  // Optional: add shared setup or helper methods
+protected:
+  // Shared setup or functions for all parameter instances
 };
 ```
 
-> **Tip:** You may also inherit separately from `testing::Test` and `testing::WithParamInterface<T>` if you have a more complex fixture hierarchy.
-
-### Step 2: Write Parameterized Test Cases Using `TEST_P`
-
-Use the `TEST_P` macro (where `_P` stands for "parameterized") to define test cases that use `GetParam()` to access the current parameter.
+2. **Write test cases with `TEST_P` macro instead of `TEST` or `TEST_F`:**
+    - Inside the test, access the current parameter via `GetParam()`.
 
 ```cpp
-TEST_P(FooTest, HandlesPositiveInput) {
-  int value = GetParam();
-  EXPECT_GT(value, 0);
-  // Your test logic
+TEST_P(FooTest, HandlesValues) {
+  int param = GetParam();
+  EXPECT_TRUE(param >= 0);
+  // Additional assertions...
 }
 ```
 
-### Step 3: Instantiate Tests with Parameters
-
-Use the `INSTANTIATE_TEST_SUITE_P` macro to create instances of the test suite with specific parameter sets.
+3. **Instantiate the parameterized test suite using `INSTANTIATE_TEST_SUITE_P`:**
+    - Provide a unique instantiation name prefix.
+    - Pass your test fixture name.
+    - Provide a parameter generator.
 
 ```cpp
 INSTANTIATE_TEST_SUITE_P(
-    PositiveValues, FooTest,
-    ::testing::Values(1, 2, 3, 5, 8));
+    PositiveInts,
+    FooTest,
+    ::testing::Values(1, 2, 3, 42));
 ```
 
-You can use other parameter generators such as:
+4. **Run `RUN_ALL_TESTS()` as usual in your test entry point.**
 
-- `ValuesIn(container)`: for containers or arrays
-- `Range(start, end, step)`: for numeric ranges
-- `Bool()`: for boolean values
-- `Combine(...)`: to generate Cartesian products of parameters
+### 2.3 Parameter Generators
 
-### Step 4: Optional — Custom Test Naming
+GoogleTest offers several built-in parameter generators to produce sequences of values:
 
-The last optional argument to `INSTANTIATE_TEST_SUITE_P` can be a function or lambda that generates descriptive test name suffixes based on parameters.
+| Generator              | Description                                             |
+|------------------------|---------------------------------------------------------|
+| `Values(v1, v2, ...)`  | Enumerates over explicitly provided values.             |
+| `ValuesIn(container)`   | Iterates over elements from a container (array, vector).|
+| `Range(start, end[, step])` | Produces values in a [start, end) range, stepping by `step`. |
+| `Bool()`               | Generates `{false, true}` for boolean testing.           |
+| `Combine(g1, g2, ...)` | Produces the Cartesian product of parameter sequences.   |
+
+### 2.4 Customizing Test Names
+
+- The last argument to `INSTANTIATE_TEST_SUITE_P` can optionally customize how test instances are named.
+- This function takes a `TestParamInfo<T>` object and returns a string name consisting only of alphanumeric characters or underscores.
+- GoogleTest provides `PrintToStringParamName` for automatic naming based on the parameter's string representation.
+
+Example:
 
 ```cpp
 INSTANTIATE_TEST_SUITE_P(
-    NamedParams, FooTest, ::testing::Values(1, 2, 3),
-    [](const ::testing::TestParamInfo<FooTest::ParamType>& info) {
-      return "Value" + std::to_string(info.param);
+    CustomNames,
+    FooTest,
+    ::testing::Values(1, 2),
+    [](const ::testing::TestParamInfo<int>& info) {
+      return "Param_" + std::to_string(info.param);
     });
 ```
 
-This helps when test outputs show parameter values clearly.
+### 2.5 Best Practices
 
-### Verification
+- Use meaningful parameter values reflecting realistic cases.
+- Avoid overly broad parameter ranges that slow down tests.
+- Combine multiple parameters with `Combine()` when testing multi-dimensional input spaces.
+- Prefer `EXPECT_*` assertions in parameterized tests to allow comprehensive failure reports.
 
-- Each `TEST_P` is run once per generated parameter value.
-- Test names appear with suffixes (indices or custom names).
-- Failures indicate which parameter caused the issue.
+### 2.6 Common Pitfalls and Troubleshooting
+
+- **Forgot to instantiate:** Every `TEST_P` requires exactly one corresponding `INSTANTIATE_TEST_SUITE_P`. If not instantiated, GoogleTest reports errors.
+- **Parameter type mismatch:** Ensure the parameter type of `TestWithParam<T>` matches the types in the generator.
+- **Dangling references:** When generating parameters involving strings or objects, ensure lifetime stability (see documentation on `ConvertGenerator` for mapping generator output to parameter types safely).
 
 ---
 
-## 2. Writing Typed Tests
+## 3. Type-Parameterized Tests
 
-Typed tests allow you to write tests once that run across multiple types, ideal for validating template classes or interfaces implemented by multiple types.
+### 3.1 Workflow Overview
 
-### Step 1: Define a Typed Test Fixture Class Template
+- **Task Description:** Write generic test logic once and run it over multiple C++ types.
+- **Prerequisites:** Understanding of C++ templates and basic TEST macro usage.
+- **Expected Outcome:** Comprehensive type coverage with minimal test code.
+- **Time Estimate:** 10–30 minutes based on complexity.
+- **Difficulty Level:** Advanced.
 
-Declare a fixture class template parameterized by a type `T`. Derive it from `testing::Test`.
+### 3.2 Writing Typed Tests
+
+1. **Define a typed test fixture template** that inherits from `testing::Test`:
 
 ```cpp
 template <typename T>
-class NumericTest : public testing::Test {
- protected:
-  T value_{};
+class MyTypedTest : public testing::Test {
+public:
+  // Type-specific members or typedefs
 };
 ```
 
-### Step 2: Define a Type List and Associate it with the Fixture
-
-Define a type list using `::testing::Types<...>` and bind it to your fixture using `TYPED_TEST_SUITE`.
+2. **Declare a type list using `::testing::Types<...>` and associate it using `TYPED_TEST_SUITE`:**
 
 ```cpp
-using NumericTypes = ::testing::Types<int, double, long>;
-TYPED_TEST_SUITE(NumericTest, NumericTypes);
+using MyTypes = ::testing::Types<int, double, std::string>;
+TYPED_TEST_SUITE(MyTypedTest, MyTypes);
 ```
 
-> **Note:** Use a type alias (`using` or `typedef`) for correct macro parsing.
-
-### Step 3: Write Typed Tests Using `TYPED_TEST`
-
-Define tests with `TYPED_TEST`, accessing the current type via `TypeParam`. Use `this->` or `TestFixture::` to refer to fixture members as required by C++ templates.
+3. **Define tests with `TYPED_TEST` macro:**
 
 ```cpp
-TYPED_TEST(NumericTest, DefaultValueIsZero) {
-  TypeParam val = this->value_;
-  EXPECT_EQ(val, TypeParam(0));
+TYPED_TEST(MyTypedTest, DoesSomething) {
+  TypeParam value{};  // TypeParam is the current type under test
+  // Test code for TypeParam
+  EXPECT_TRUE(/* some condition involving value */);
 }
 ```
 
-Write as many typed tests as necessary.
+4. **Compile and run tests normally.**
 
-### Step 4: Run Your Typed Tests
+### 3.3 Using Type-Parameterized Test Suites
 
-GoogleTest will run each typed test once per type in the type list.
+- These are reusable test patterns defined without knowing the type parameters ahead of time.
+- Defined similarly to typed tests but use `_P` suffix macros: `TYPED_TEST_SUITE_P`, `TYPED_TEST_P`, and are registered via `REGISTER_TYPED_TEST_SUITE_P`.
+- Then instantiated in separate translation units or later using `INSTANTIATE_TYPED_TEST_SUITE_P`.
 
-### Optional Step 5: Custom Type Naming
+### 3.4 Customizing Type Names
 
-You can supply a custom naming class with a static template method `GetName(int)` to generate readable test suite names.
+- Provide a class with template static method `GetName` to generate readable test names for types.
 
 ```cpp
-class TypeNames {
+class NameGenerator {
  public:
   template <typename T>
   static std::string GetName(int) {
-    if (std::is_same<T, int>::value) return "Int";
-    if (std::is_same<T, double>::value) return "Double";
-    return "Unknown";
+    if constexpr (std::is_same_v<T, int>) return "int";
+    if constexpr (std::is_same_v<T, double>) return "double";
+    return "unknown";
   }
 };
 
-TYPED_TEST_SUITE(NumericTest, NumericTypes, TypeNames);
+TYPED_TEST_SUITE(MyTypedTest, MyTypes, NameGenerator);
 ```
-
-### Verification
-
-- Test results show the type names, aiding in identifying issues per type.
-- Typed tests instantiate and run exactly once per type.
 
 ---
 
-## 3. Using Type-Parameterized Tests
+## 4. Combining Value and Type Parameterization
 
-Type-parameterized tests are similar to typed tests but allow test suite definitions without prior knowledge of the specific types. You can instantiate the tests with different type lists later.
+- You can combine `Combine()` generator with value-parameterized tests for multi-dimensional parameter spaces.
+- Type-parameterized tests can offer broad coverage by testing various types.
 
-### Step 1: Define a Fixture Class Template
+---
 
-```cpp
-template <typename T>
-class ContainerTest : public testing::Test {
- protected:
-  void CheckEmpty() {
-    EXPECT_TRUE(container_.empty());
-  }
-  T container_;
-};
-```
+## 5. Examples
 
-### Step 2: Declare the Type-Parameterized Test Suite
-
-Use `TYPED_TEST_SUITE_P` to declare your test suite as type-parameterized.
+### 5.1 Value-Parameterized Test Example
 
 ```cpp
-TYPED_TEST_SUITE_P(ContainerTest);
-```
+class FactorialTest : public ::testing::TestWithParam<int> {};
 
-### Step 3: Define Type-Parameterized Tests with `TYPED_TEST_P`
-
-Same as typed tests, write tests referring to `TypeParam`.
-
-```cpp
-TYPED_TEST_P(ContainerTest, EmptyInitially) {
-  this->CheckEmpty();
+int Factorial(int n) {
+  return n <= 1 ? 1 : n * Factorial(n-1);
 }
-```
 
-Write as many tests as you want.
-
-### Step 4: Register Your Tests
-
-Register your test names using `REGISTER_TYPED_TEST_SUITE_P`.
-
-```cpp
-REGISTER_TYPED_TEST_SUITE_P(ContainerTest, EmptyInitially);
-```
-
-### Step 5: Instantiate Tests with Desired Types
-
-Instantiate with `INSTANTIATE_TYPED_TEST_SUITE_P` and a list of types.
-
-```cpp
-using MyTypes = ::testing::Types<std::vector<int>, std::list<int>>;
-INSTANTIATE_TYPED_TEST_SUITE_P(MyContainers, ContainerTest, MyTypes);
-```
-
-### Verification
-
-- Your tests will be instantiated and run for each type you specify.
-- You can instantiate the same suite multiple times with different type sets.
-
----
-
-## 4. Practical Tips & Best Practices
-
-- **Avoid underscores in test suite and test names.** GoogleTest reserves underscores for internal use. Use PascalCase or camelCase instead.
-- **Use `TEST_P` and `INSTANTIATE_TEST_SUITE_P` only with parameterized fixtures that derive from `TestWithParam<T>` or implement `WithParamInterface<T>`.**
-- **When using typed and type-parameterized tests, remember to use `this->` to access fixture members inside templates due to C++ rules.**
-- **Define and instantiate parameterized tests at global or namespace scope. Do not place them inside functions.**
-- **For complex parameter sets, consider using `Combine()` and `ConvertGenerator()` for better composition and readability.**
-- **When naming parameter instances, ensure names are unique and contain only alphanumeric characters and underscores.**
-
----
-
-## 5. Common Pitfalls and Troubleshooting
-
-- **Missing Instantiations**: If you define `TEST_P` but do not instantiate via `INSTANTIATE_TEST_SUITE_P`, GoogleTest will report failure for uninstantiated parameterized tests. Suppress this using `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST` if intentional.
-
-- **Incorrect Fixture Inheritance**: Ensure parameterized fixtures inherit properly from `TestWithParam<T>`.
-
-- **Test Suite Name Collisions**: Avoid using underscores as they can cause naming collisions or invalid class names.
-
-- **Lambda Parameter Mismatches for Custom Names**: When creating a custom name generator, ensure your lambda's parameter type matches the test suite's parameter type.
-
-- **Using Non-Copyable Parameter Types**: Test parameters must be copyable. Ensure your types fulfill this requirement.
-
-- **Assertions in Constructors/Destructors**: Avoid using fatal assertions (e.g., `ASSERT_*`) in constructors or destructors, as it leads to compilation errors. Use `SetUp()`/`TearDown()` instead.
-
----
-
-## 6. Advanced Usage Examples
-
-### Value-Parameterized Test Example
-
-```cpp
-class IsEvenTest : public testing::TestWithParam<int> {};
-
-TEST_P(IsEvenTest, ReturnsTrueForEvenNumbers) {
+TEST_P(FactorialTest, ComputesCorrectly) {
   int n = GetParam();
-  EXPECT_EQ(n % 2, 0);
+  int expected = /* known factorial value for n */;
+  EXPECT_EQ(Factorial(n), expected);
 }
 
-INSTANTIATE_TEST_SUITE_P(EvenNumbers, IsEvenTest, testing::Values(2, 4, 6, 8));
+INSTANTIATE_TEST_SUITE_P(
+    BasicCases, FactorialTest,
+    ::testing::Values(0, 1, 2, 3, 8));
 ```
 
-### Typed Test Example
+### 5.2 Type-Parameterized Test Example
 
 ```cpp
 template <typename T>
-class NumericLimitsTest : public testing::Test {
+class StackTest : public ::testing::Test {
+public:
+  Stack<T> stack;
 };
 
-using NumericTypes = ::testing::Types<int, double, long>;
-TYPED_TEST_SUITE(NumericLimitsTest, NumericTypes);
+using MyTypes = ::testing::Types<int, double, std::string>;
+TYPED_TEST_SUITE(StackTest, MyTypes);
 
-TYPED_TEST(NumericLimitsTest, MaxIsGreaterThanZero) {
-  EXPECT_GT(std::numeric_limits<TypeParam>::max(), 0);
+TYPED_TEST(StackTest, IsEmptyInitially) {
+  EXPECT_TRUE(this->stack.empty());
+}
+
+TYPED_TEST(StackTest, PushIncreasesSize) {
+  this->stack.push(TypeParam{});
+  EXPECT_EQ(this->stack.size(), 1);
 }
 ```
 
-### Type-Parameterized Test Example
+---
 
-```cpp
-template <typename T>
-class StackTest : public testing::Test {
-  // Assume Stack<T> provides Push(), Pop(), and empty().
-  Stack<T> stack_;
-};
+## 6. Troubleshooting & Tips
 
-TYPED_TEST_SUITE_P(StackTest);
+### 6.1 Common Issues
 
-TYPED_TEST_P(StackTest, IsEmptyInitially) {
-  EXPECT_TRUE(this->stack_.empty());
-}
+- **Tests not running:** Verify `INSTANTIATE_TEST_SUITE_P` is called for all `TEST_P` tests.
+- **Name collisions:** Use unique prefixes in `INSTANTIATE_TEST_SUITE_P`.
+- **Invalid test names:** Custom name generators must only produce alphanumeric and underscore.
+- **Parameter lifetime issues:** Use `ConvertGenerator` with care when generating parameters referencing strings or objects.
 
-REGISTER_TYPED_TEST_SUITE_P(StackTest, IsEmptyInitially);
+### 6.2 Best Practices
 
-using StackTypes = ::testing::Types<std::vector<int>, std::list<int>>;
-INSTANTIATE_TYPED_TEST_SUITE_P(MyStackTests, StackTest, StackTypes);
-```
+- Use descriptive instantiation prefixes that reflect the parameter set purpose.
+- Group related parameters logically to improve test clarity.
+- Keep parameter lists manageable to avoid long test suites and slow runs.
+- When combining parameters with `Combine()`, document the parameter types and orders clearly.
 
 ---
 
 ## 7. Next Steps & Related Content
 
-- Explore the [Value-Parameterized Tests section in advanced topics](../advanced.md#value-parameterized-tests) to deepen your understanding.
-- Read about [Typed Tests and Type-Parameterized Tests](../advanced.md#typed-tests) for advanced use cases.
-- Review [How to Write Your First Test](../../getting-started/first-test-experience/writing-your-first-test) to reinforce test basics.
-- Consult the [Testing Reference](../reference/testing.md) for all relevant macros and detailed API insights.
+- Explore the [GoogleTest Primer](docs/primer.md) for testing fundamentals.
+- Learn about [Writing Your First Test Case](getting-started/first-test-experience/writing-your-first-test.mdx).
+- Review [Using Assertions Effectively](guides/core-workflows/using-assertions.mdx) to strengthen test validations.
+- Check the [Typed Tests](docs/reference/testing.md#TYPED_TEST) and [Value-Parameterized Tests](docs/reference/testing.md#TEST_P) sections.
+- Study examples in [googletest/samples/sample7_unittest.cc](https://github.com/google/googletest/blob/main/googletest/samples/sample7_unittest.cc) and [sample8_unittest.cc](https://github.com/google/googletest/blob/main/googletest/samples/sample8_unittest.cc) for practical illustrations.
 
 ---
 
-## Additional Resources
+## References
 
-- [GoogleTest Primer](../primer.md)
-- [GoogleTest FAQ](../faq.md)
-- [Assertions Reference](../api-reference/core-testing-apis/assertions)
-- [Mocking APIs](../api-reference/mocking-apis/mock-classes-methods)
+- [Value-Parameterized Tests - Official Docs](../advanced.md#value-parameterized-tests)
+- [Type-Parameterized Tests - Official Docs](../advanced.md#typed-tests)
+- [`TEST_P` and `INSTANTIATE_TEST_SUITE_P` - Testing Reference](docs/reference/testing.md#TEST_P)
+- [`TYPED_TEST` and `TYPED_TEST_SUITE` - Testing Reference](docs/reference/testing.md#TYPED_TEST)
+- [Parameter Generators API](googletest/include/gtest/gtest-param-test.h)
 
 ---
 
-This guide equips you with the tools to write comprehensive and maintainable parameterized and typed tests using GoogleTest, leveraging its powerful macros and conventions to boost your test automation coverage and reliability.
+*This documentation covers **Parameterizing Tests: Value and Type Parameters** page to help users write comprehensive parameterized tests in GoogleTest with illustrative examples, setup guidance, and troubleshooting advice.*
